fix(buttons): proper inner whitespace

--- a/app/styles/blocks/btn.styl
+++ b/app/styles/blocks/btn.styl
@@ -1,9 +1,9 @@
 .btn
-	padding .8em 1em
 	vertical-align baseline
 
 	display inline-block
 
+	padding .8em 1.6em
 
 	color #000
 	font-family $heading-fonts
